@@ -11,6 +11,15 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V01-00-37
+2018-09-25 Mikhail S. Dubrovin
+- add uxi and pixis
+	new file:   src/CalibParsBaseUxiV1.py
+	modified:   src/CalibParsStore.py
+	modified:   src/GlobalUtils.py
+
+Tag: V01-00-36 - Dan???
+
 Tag: V01-00-35
 2018-07-05 Mikhail S. Dubrovin
 - add support for epix10ka in calib directory
